tests/compile/01.stderr
error[E0277]: the trait bound `C: Sealed` is not satisfied
  --> $DIR/01.rs:16:6
   |
11 | #[sealed]
   | --------- required by this bound in `T`
12 | trait T {}
   |       - required by a bound in this
...
16 | impl T for C {}
   |      ^ the trait `Sealed` is not implemented for `C`
